--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Submarines/"] 
-  path = Submarines/
+[submodule "/Submarines"] 
+  path = /Submarines
   url = https://github.com/Anubhav-Zemosolabs/Submarines.git
